<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="15dp"
	android:background="@color/white"
	android:orientation="vertical"
	tools:context=".activities.impls.onboarding.AttendeeActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="50dp"
		android:layout_gravity="center_horizontal"
		android:gravity="center"
		android:textStyle="bold"
		android:textSize="19sp"
		android:text="@string/activity_interests_title"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:textSize="16sp"
		android:text="@string/activity_interests_subtitle"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:layout_marginTop="10dp"
		android:orientation="horizontal"
		android:weightSum="3">

		<TextView
			android:id="@+id/choice_ecm"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:padding="5dp"
			android:clickable="true"
			android:focusable="true"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_ecm"/>

		<TextView
			android:id="@+id/choice_bpm"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_bpm"/>

		<TextView
			android:id="@+id/choice_odm"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_odm"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:layout_marginTop="10dp"
		android:orientation="horizontal"
		android:weightSum="3">

		<TextView
			android:id="@+id/choice_data_science"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_data_science"/>

		<TextView
			android:id="@+id/choice_watson_analytics"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_watson_analytics"/>

		<TextView
			android:id="@+id/choice_bi"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_bi"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="80dp"
		android:layout_marginTop="10dp"
		android:orientation="horizontal"
		android:weightSum="3">

		<TextView
			android:id="@+id/choice_cloud"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_cloud"/>

		<TextView
			android:id="@+id/choice_devops"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginLeft="10dp"
			android:layout_marginStart="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginEnd="10dp"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_devops"/>

		<TextView
			android:id="@+id/choice_integration"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:padding="5dp"
			android:background="@drawable/checkable_record_states"
			android:gravity="center"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="@drawable/checkable_record_states"
			android:text="@string/activity_interests_integration"/>

	</LinearLayout>

	<Button
		android:id="@+id/nextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="30dp"
		android:textSize="17sp"
		android:text="@string/navigation_next"/>

</LinearLayout>